# fastapi-seed

./: .gitignore  Makefile  README.md  pyproject.toml
fastapi-seed/: api.py
fastapi-seed/datalayer/: db.py
fastapi_seed/: api.py  app.py
fastapi_seed/api/: content_moderation.py  heroes.py
fastapi_seed/datalayer/models/: hero.py  movie.py
fastapi_seed/middleware/: rps_tracker.py
fastapi_seed/models/: __init__.py  hero.py  movie.py
fastapi_seed/repository/: database.py  db.py  heroes.py
fastapi_seed/routes/: heroes.py  movies.py
fastapi_seed/routes/dependencies/: __init__.py  services.py
fastapi_seed/services/: __init__.py  content_moderation.py  heroes.py
tests/api/: test_heroes.py
